# locust-telemetry

./: .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pre-release-testpypi.yaml  release-testpypi.yaml  release.yaml  tests.yaml
docs/: Makefile  api.rst  changelog.rst  conf.py  configuration.rst  contributing.rst  examples.rst  examples_json.rst  extending.rst  faq.rst  getting_started.rst  help.rst  index.rst  installation.rst  quickstart.rst  recorders.rst  requirements.txt  telemetry.rst
docs/api/: index.rst
docs/api/common/: index.rst
docs/api/core/: index.rst
docs/api/core_telemetry/: index.rst
docs/api/recorders/: index.rst
docs/source/: api_reference.rst  changelog.rst  conf.py  configuration.rst  contributing.rst  examples.rst  faq.rst  features.rst  index.rst  installation.rst  overview.rst  quickstart.rst  troubleshooting.rst
docs/source/api/: index.rst  locust_telemetry.common.rst  locust_telemetry.core.rst  locust_telemetry.core_telemetry.rst  locust_telemetry.k8_telemetry.rst  locust_telemetry.rst
docs/source/api/core/: index.rst
examples/local/: Makefile  docker-compose.yaml
examples/local-json/app/: locust_telemetry-0.0.0-py3-none-any.whl
examples/local/app/: Dockerfile  locust_telemetry-0.0.0-py3-none-any.whl  locust_telemetry-0.1.0-py3-none-any.whl  locust_telemetry-0.1.1-py3-none-any.whl  locustfile.py
examples/local/otel/: config.yaml
examples/local/otel_collector/: config.yaml
examples/local/prometheus/: config.yaml
examples/local/promtail/: config.yaml
locust_observability/: config.py  initialization.py  logger.py  metadata.py  metrics.py
locust_observability/recorders/: base.py  stats.py  system.py
locust_telemetry/: config.py  entrypoint.py  logger.py  metadata.py
locust_telemetry/common/: clients.py  helpers.py  telemetry.py
locust_telemetry/core/: cli.py  coordinator.py  events.py  handlers.py  manager.py  plugin.py  recorder.py  telemetry.py
locust_telemetry/core_telemetry/: constants.py  master.py  mixins.py  plugin.py  stats.py  system.py  worker.py
locust_telemetry/k8_telemetry/: plugin.py
locust_telemetry/recorders/json/: constants.py  handlers.py  master.py  mixins.py  plugin.py  recorder.py  worker.py
locust_telemetry/recorders/locust/: master.py  mixins.py  plugin.py  worker.py
locust_telemetry/recorders/otel/: callbacks.py  constants.py  exceptions.py  handlers.py  master.py  metrics.py  mixins.py  otel.py  plugin.py  recorder.py  worker.py
tests/: conftest.py  test_entrypoint.py  test_initialization.py  test_logger.py  test_metadata.py
tests/common/: test_helpers.py
tests/core/: test_base_plugin.py  test_coordinator.py  test_manager.py  test_plugin.py  test_recorder.py  test_telemetry.py
tests/core_telemetry/: test_core_plugin.py  test_master.py  test_mixins.py  test_stats.py  test_systems.py  test_worker.py
tests/k8_telemetry/: test_k8_plugin.py
tests/recorders/: test_base.py  test_stats.py  test_system.py
(+30 files in other folders)
