[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locust-telemetry"
version = "0.1.0"
description = "A Locust plugin to log load test metrics to observability tools (DB-free)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Swaroop Shubhakrishna Bhat", email = "swaroopbhatk@gmail.com"}
]
keywords = [
    "locust",
    "locust-plugin",
    "json-logging",
    "observability",
    "locust-telemetry",
    "locust-stats",
    "load-testing",
    "metrics-recorder"
]
dependencies = [
    "locust>=2.37.0",
    "python-json-logger>=3.3.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.3.0",
]

[project.urls]
Homepage = "https://github.com/platform-crew/locust-observability"
Documentation = "https://github.com/platform-crew/locust-observability#readme"
Bug-Tracker = "https://github.com/platform-crew/locust-observability/issues"

[project.entry-points."locust_plugins"]
telemetry_locust = "locust_telemetry.core_telemetry.plugin:load_plugin"

# --------------------------
# Code formatting tools
# --------------------------
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["locust_telemetry"]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

# --------------------------
# Packages to include
# --------------------------
[tool.setuptools.packages]
find = { include = ["locust_telemetry*"] }

# --------------------------
# Coverage report
# --------------------------

[tool.coverage.run]
source = ["locust_telemetry"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
