[metadata]
name = locust-observability
version = 0.1.0
description = A Locust plugin to log load test metrics to observability tools (DB-free).
long_description = file: README.md
long_description_content_type = text/markdown
author = Swaroop Shubhakrishna Bhat
author_email = swaroopbhatk@gmail.com
license = MIT
url = https://github.com/platform-crew/locust-observability
keywords = locust locust-plugin json-logging load-testing observability locust-stats metrics-recorder

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    locust>=2.37.14
    python-json-logger>=3.3.0

[options.extras_require]
dev =
    pytest>=7.0
    flake8>=6.0
    black>=24.0
    mypy>=1.5

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
